building student login and registration page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
     <title>Zeet Hub Education</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="background-color:lightgray"></div>
     
   </body>
 </html>
